Add docker-vm to DNS

--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -108,6 +108,9 @@ bind_zones:
       - name: "ups01.hogs"
         ip: "10.10.0.5"
         ipv6: "fd36:3eb3:43b0:a::5"
+      - name: "docker-vm.hogs"
+        ip: "10.10.0.6"
+        ipv6: "fd36:3eb3:43b0:a::6"
       - name: "ipmi.firstlightweaveslivingsong.hogs"
         ip: "10.10.0.10"
         ipv6: "fd36:3eb3:43b0:a::a"
