--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -81,6 +81,12 @@ bind_zones:
           - "factorio"
           - "valheim"
           - "valheim.hogs"
+      - name: "zabbix-server.hogs"
+        ip: "10.117.0.32"
+        ipv6: "fd36:3eb3:43b0:75::20"
+      - name: "zabbix.hogs"
+        ip: "10.117.0.33"
+        ipv6: "fd36:3eb3:43b0:75::21"
       - name: "maccabeus01.hogs"
         ip: "10.117.0.48"
         ipv6: "fd36:3eb3:43b0:75::30"
