log a more sensible string when no_log is false (like when debugging)

--- a/roles/mysql-server/tasks/main.yml
+++ b/roles/mysql-server/tasks/main.yml
@@ -112,3 +112,5 @@
     login_user: "root"
     state: "present"
   loop: "{{ mysql_server__users }}"
+  loop_control:
+    label: "{{ item.name }}@{{ item.host }}"
