Allow ara connections from MAN to HOME

--- a/vyos.yml
+++ b/vyos.yml
@@ -558,6 +558,15 @@
                       group:
                         address_group: "NTP-SERVICES-v4"
                         port_group: "NTP"
+                  - number: 30
+                    description: "Allow ARA Connections ({{ ansible_managed }})"
+                    action: "accept"
+                    protocol: "tcp"
+                    state:
+                      new: true
+                    destination:
+                      address: "10.117.0.30"
+                      port: 8000
               - name: "HOME-from-NOWAN-v4"
                 description: "{{ ansible_managed }}"
                 enable_default_log: yes
@@ -1766,6 +1775,15 @@
                       group:
                         address_group: "NTP-SERVICES-v6"
                         port_group: "NTP"
+                  - number: 30
+                    description: "Allow ARA Connections ({{ ansible_managed }})"
+                    action: "accept"
+                    protocol: "tcp"
+                    state:
+                      new: true
+                    destination:
+                      address: "fd36:3eb3:43b0:75::1e"
+                      port: 8000
               - name: "HOME-from-UNIFI-MAN-v6"
                 description: "{{ ansible_managed }}"
                 enable_default_log: yes
