allow ICMP from MAN to HOME

--- a/vyos.yml
+++ b/vyos.yml
@@ -549,6 +549,12 @@
                     action: "drop"
                     state:
                       invalid: true
+                  - number: 3
+                    description: "Allow ICMP ({{ ansible_managed }})"
+                    action: "accept"
+                    protocol: "icmp"
+                    icmp:
+                      type_name: any
                   - number: 20
                     description: "Allow NTP ({{ ansible_managed }})"
                     action: "accept"
@@ -1766,6 +1772,10 @@
                     action: "drop"
                     state:
                       invalid: true
+                  - number: 3
+                    description: "Allow ICMP ({{ ansible_managed }})"
+                    action: "accept"
+                    protocol: "icmpv6"
                   - number: 20
                     description: "Allow NTP ({{ ansible_managed }})"
                     action: "accept"
