Do not use systemd-resolved for local DNS

--- a/roles/common/handlers/main.yml
+++ b/roles/common/handlers/main.yml
@@ -5,3 +5,8 @@
     argv:
       - "netplan"
       - "apply"
+
+- name: "restart systemd-resolved"
+  ansible.builtin.systemd:
+    name: "systemd-resolved"
+    state: "restarted"
