--- a/roles/common/tasks/ubuntu.yml
+++ b/roles/common/tasks/ubuntu.yml
@@ -76,3 +76,54 @@
     state: absent
     remove: yes
   when: ansible_distribution == "Ubuntu"
+
+# Zabbix Agent
+- name: "Install Zabbix agent repo"
+  ansible.builtin.apt:
+    deb: "https://repo.zabbix.com/zabbix/5.4/ubuntu/pool/main/z/zabbix-release/zabbix-release_5.4-1+ubuntu{{ ansible_lsb.release }}_all.deb"
+  tags:
+    - "zabbix-agent"
+- name: "Install zabbix-agent"
+  ansible.builtin.apt:
+    name: "zabbix-agent"
+    state: "latest"
+    update_cache: yes
+    cache_valid_time: 3600
+  tags:
+    - "zabbix-agent"
+- name: "Enable zabbix-agent"
+  ansible.builtin.systemd:
+    name: "zabbix-agent"
+    enabled: yes
+  tags:
+    - "zabbix-agent"
+- name: "Set zabbix-agent Hostname"
+  ansible.builtin.lineinfile:
+    path: "/etc/zabbix/zabbix_agentd.conf"
+    regexp: "^Hostname="
+    line: "Hostname={{ inventory_hostname }}"
+  notify: "restart zabbix-agent"
+  tags:
+    - "zabbix-agent"
+- name: "Set zabbix-agent Server"
+  ansible.builtin.lineinfile:
+    path: "/etc/zabbix/zabbix_agentd.conf"
+    regexp: "^Server="
+    line: "Server=zabbix-server.hogs.tswn.us"
+  notify: "restart zabbix-agent"
+  tags:
+    - "zabbix-agent"
+- name: "Set zabbix-agent ServerActive"
+  ansible.builtin.lineinfile:
+    path: "/etc/zabbix/zabbix_agentd.conf"
+    regexp: "^ServerActive="
+    line: "ServerActive=zabbix-server.hogs.tswn.us"
+  notify: "restart zabbix-agent"
+  tags:
+    - "zabbix-agent"
+- name: "Ensure zabbix-agent is started"
+  ansible.builtin.systemd:
+    name: "zabbix-agent"
+    state: "started"
+  tags:
+    - "zabbix-agent"
