--- a/vyos.yml
+++ b/vyos.yml
@@ -338,6 +338,17 @@
                   - address: "fd36:3eb3:43b0:75::13"
                   # sdwilsh-desktop
                   - address: "fd36:3eb3:43b0:75::1f"
+              - name: "ZABBIX-SERVER-v4"
+                description: "The v4 zabbix-server.hogs.tswn.us addresses"
+                afi: "ipv4"
+                members:
+                  - address: "10.117.0.32"
+              - name: "ZABBIX-SERVER-v6"
+                description: "The v4 zabbix-server.hogs.tswn.us addresses"
+                afi: "ipv6"
+                members:
+                  - address: "fd36:3eb3:43b0:75::20"
+                  - address: "fd36:3eb3:43b0:75:42:aff:fe75:20"
             network_group:
               - name: "RFC1918-v4"
                 description: "IPv4 Private Address Space ({{ ansible_managed }})"
@@ -573,6 +584,16 @@
                     destination:
                       address: "10.117.0.30"
                       port: "8000"
+                  - number: 40
+                    description: "Allow zabbix-agent Connections ({{ ansible_managed }})"
+                    action: "accept"
+                    protocol: "tcp"
+                    state:
+                      new: true
+                    destination:
+                      group:
+                        address_group: "ZABBIX-SERVER-v4"
+                      port: "10051"
               - name: "HOME-from-NOWAN-v4"
                 description: "{{ ansible_managed }}"
                 enable_default_log: yes
@@ -1794,6 +1815,16 @@
                     destination:
                       address: "fd36:3eb3:43b0:75::1e"
                       port: "8000"
+                  - number: 40
+                    description: "Allow zabbix-agent Connections ({{ ansible_managed }})"
+                    action: "accept"
+                    protocol: "tcp"
+                    state:
+                      new: true
+                    destination:
+                      group:
+                        address_group: "ZABBIX-SERVER-v6"
+                      port: "10051"
               - name: "HOME-from-UNIFI-MAN-v6"
                 description: "{{ ansible_managed }}"
                 enable_default_log: yes
